--- a/views/home.rhtml
+++ b/views/home.rhtml
@@ -1,35 +1,31 @@
-<img class="promo" src="/images/promo.jpg" />
+<div class="promos">
+  <img src="/images/promo1.png" />
+  <img src="/images/promo2.png" />
+</div>
 <div class="boxes">
 <div class="box">
 		<img src="/images/elements.png" class="elements" />
-		<h2>One tool does it all:</h2>
-		<p>Liquid <br />
+		<h2>One tool<br /> does it all.</h2>
+		<p>
 		Nitrogen <br />
 		High temperatures<br />
 		Acid-Resistant <br />
 		High Torque<br />
-		Special Applications</p>
-
-		<p class="small">You name it, the M3 handles it.<br />
-		<a href="/specifications">Read more.</a></p>
+		Special Applications<br />
+		You name it, the M3 handles it.</p>
 </div>
 
 <div class="box2">
 	<h2>Less is more. Much More.</h2>
 	<img src="/images/ruler.png" class="ruler" />
 
-	<p class="small">Yesterday’s motors are often 10’ long or more.
-	The new M3 delivers comparable torque figures in less than 34 inches.
-	That translates into more maneuverability downhole, lower transportation costs and fewer injuries. Never has less delivered more in performance and benefits – all packed into a compact, manageable length.<br />
-	<a href="/features">Read more.</a></p>
+	<p>Yesterday’s motors are often 10’ long or more. The new M3 delivers comparable torque figures in less than 34 inches. Never has less delivered more in performance and benefits – all packed into a compact, manageable length.</p>
 </div>
 
-<div class="box2">
-		<img src="/images/tools.png" class="tools" />
+<div class="box">
+		<img src="/images/cost.jpg" class="tools" />
 	<h2>Work longer, spend less.</h2>
 
-	<p class="small">The M3 is engineered with the latest corrosive, wear-resistant materials and technology. This keeps it down in the hole working longer.  It’s small size and innovative design keeps, replacement part costs low and allows for quick and efficient redress.
-	<br />
-	<a href="/resellers">Read more.</a></p>
+	<p>Engineered with the latest corrosive, wear-resistant materials and technology, the M3 stays down the hole working longer. Small size and innovative design keeps replacement part costs low and allows for quick and efficient redress. </p>
 </div>
 </div>
