--- a/views/applications.rhtml
+++ b/views/applications.rhtml
@@ -6,53 +6,46 @@
 			<p>The coil tubing industry has undergone rapid expansion, and with it the need for improved downhole motors. The M3 fills that need, with superior performance in a greatly reduced size. Its high torque, elevated flow rates, and heavy load capability allow it to exceed current motors in cleanout, heavy duty milling, window cutting and drilling.</p>
 		</div>
 		<div class="right_col">
-			<ul class="accordian">
+			<ul class="accordian application">
 				<li>
 					<h3>Scale Milling Operations</h3>
 					<div class="extra">
-					<img src="/images/example.png" />
 					<p>The M3 can be effectively used to mill away scale accumulations from the walls of a well. These include excess cement, calcium carbonate, calcium sulfate, iron sulfides and various phosphates and oxides, which form from chemical reactions with the well bore.</p>
 					</div>
 				</li>
 				<li>
 					<h3>Underbalanced Milling</h3>
 					<div class="extra">
-					<img src="/images/example.png" />
 					<p>This procedure is used to drill oil and gas wells when the pressure in the wellbore is kept lower than the fluid pressure in the formation being drilled. During the drilling process, formation fluid flows into the wellbore and up to the surface. This is the reverse of normal drilling procedure, where a wellbore is kept at a pressure above the formation to prevent formation fluid entering the well.  The M3 is capable of underbalanced milling.</p>
 					</div>
 				</li>
 				<li>
 					<h3>High Temperature Milling</h3>
 					<div class="extra">
-					<img src="/images/example.png" />
 					<p>Temperatures down hole can routinely reach 400&deg; F and higher. That’s why older legacy motors with elastomer-based power sections perform inconsistently – they can’t handle high temperatures. The M3 can. It’s high-temperature motor can resist operating temperatures to over 500&deg; F.</p>
 					</div>
 				</li>
 				<li>
 					<h3>Fishing Operations</h3>
 					<div class="extra">
-					<img src="/images/example.png" />
 					<p>During drilling, debris often accumulates down in the hole that has to be removed through “fishing.” When fishing is required the M3 doesn’t get in the way.  It enables the fishing tool to do its job of removing unwanted debris.</p>
 					</div>
 				</li>
 				<li>
 					<h3>Tube Cutting Operations</h3>
 					<div class="extra">
-					<img src="/images/example.png" />
 					<p>Sometimes drilling requires cutting a tube above or below a nipple, or to recover a section. Mechanical or water jet cutting methods can be used, depending on the tube. The M3 enables these tools to do their jobs properly, with high output torque and aggressive flowrates.</p>
 					</div>
 				</li>
 				<li>
 					<h3>Underreaming Operations</h3>
 					<div class="extra">
-					<img src="/images/example.png" />
 					<p>An underreaming operation requires opening the blades of the underreamer to clean out the full diameter of the casing. By managing the pressure and flowrate, the operator knows when the underreamer is fully engaged and can retract the blades.  The M3 has what it takes to power these operations.</p>
 					</div>
 				</li>
 				<li>
 					<h3>Plug Removal Operations</h3>
 					<div class="extra">
-					<img src="/images/example.png" />
 					<p>Plugs are frequently used for isolating various intervals in a well. When milling these plugs, they’ll often spin with the motor, requiring a tool that’s capable of withstanding a high weight on bit. The M3 motor’s high-weight-on-bit capability makes it perfect for handling plug removals.</p>
 					</div>
 				</li>
