add method to form

--- a/views/contact.rhtml
+++ b/views/contact.rhtml
@@ -24,7 +24,7 @@
 					<h3>Inquire online.</h3>
 					<p>The M3 is unmatched in this industry across every characteristic and when considered together is revolutionary.  You can see below how we stack up against the legacy moineau type and roller vane motor.</p>
 					
-					<form id="form" action='/email'>
+					<form id="form" action='/email' method="post">
 					  <table cellspacing="0" cellpadding="0">
 					    <tr>
 					    </tr>
