Change email address on form

--- a/views/contact.rhtml
+++ b/views/contact.rhtml
@@ -5,7 +5,7 @@
 			<p>Martini Worldwide is redefining the oil and gas well service industry with innovative new tools and technologies that increase effectiveness and reduce costs. “Powering Innovation” is more than just a slogan. It is a core value demonstrated by every Martini associate. We will never settle for offering products that are simply an imitation of an existing design. We are dedicated to innovation and improvement. We are committed to exceeding current capabilities – not to mention exceeding your expectations.</p>
 		</div>
 		<div class="right_col">
-		  <% if @send == true %>
+		  <% if @sent == true %>
 		    <div class="notification">
 		      Your message has been sent. We will contact you shortly.
 		    </div>
