--- a/views/specifications.rhtml
+++ b/views/specifications.rhtml
@@ -1,58 +1,164 @@
 <div class="top_bg">
 	<div class="container clearfix">
-		<div class="left_col">
-			<img src="/images/features.png" />
+			<img class="spec" src="/images/features.png" />
+			<div class="top">
 			<h2>Specifications</h2>
-			<p>The M3 is revolutionary in terms of size and performance. Its technology, design and construction are truly a breakthrough. When compared to the two leading industry legacy motors, its features are unmatched in virtually every category. Click the comparison links below to see how the M3 measures up.</p>
-			<br />
-			<a href="#" class="spec_button">
-				General<br /> Specifications
-			</a>
-			<a href="#" class="spec_button">
-				Individual<br /> Specifications
-			</a>
-		</div>
-		<div class="right_col2">
-			<h3>General Specifications</h3>
-			<p class="small">The M3 is revolutionary in terms of its size and performance. Its technology, design and construction are truly a breakthrough. When compared to the two leading industry legacy motors, the moineau and roller vane, its features are unmatched in virtually every category.</p>
+			<p>The M3 is revolutionary in terms of size and performance. Its technology, design and construction are truly a breakthrough. When compared to the two leading industry legacy motors, its features are unmatched in virtually every category. View the comparison charts below to see how the M3 measures up.</p>
+			<a href="#" class="general tab active">General</a>
+			<a href="#" class="individual tab">Individual</a>
+			</div>
+			<div class="bottom_specs">
+			<div class="general_tab">
+			  <table cellspacing=0 cellpadding=0>
+        				<tr class="solid">
+        					<td>Motor<br /> Type</td>
+        					<td>Torque</td>
+        					<td>&gt;350F</td>
+        					<td>Nitrogen</td>
+        					<td>Acid?</td>
+        					<td>Length</td>
+        					<td>Maintain</td>
+        				</tr>
+        				<tr>
+        					<td class="left"><img src="/images/mw_logo.png" /></td>
+        					<td class="dots">Strong</td>
+        					<td class="dots">Yes</td>
+        					<td class="dots">Yes</td>
+        					<td class="dots">Yes</td>
+        					<td class="dots">Shortest</td>
+        					<td class="dots">$</td>
+        				</tr>
+        				<tr>
+        					<td class="left">Moineau<br /> Type</td>
+        					<td class="dots">Strong</td>
+        					<td class="dots">No</td>
+        					<td class="dots">No</td>
+        					<td class="dots">No</td>
+        					<td class="dots">Long</td>
+        					<td class="dots">$$$</td>
+        				</tr>
+        				<tr>
+        					<td class="left">Roller<br /> Vane Type</td>
+        					<td>Poor</td>
+        					<td>Yes</td>
+        					<td>Yes</td>
+        					<td>Yes</td>
+        					<td>Short</td>
+        					<td>$$</td>
+        				</tr>
+        			</table>
+        </div>
+			<div class="individual_tab">
+			  <div class="info">
+			<p>The M3 is produced in four sizes.  Each meet the general requirements noted above but at differing specifications.  This chart provides the specifications for each motor size.</p>
+		  </div>
 			<table cellspacing=0 cellpadding=0>
 				<tr class="solid">
-					<td>Motor<br /> Type</td>
-					<td>Torque</td>
-					<td>&gt;350F</td>
-					<td>Nitrogen</td>
-					<td>Acid?</td>
-					<td>Length</td>
-					<td>Maintain</td>
+					<td></td>
+					<td><span class="big">1</span> 11/16</td>
+					<td><span class="big">2</span> 1/8</td>
+					<td><span class="big">2</span> 7/8</td>
+					<td><span class="big">3</span> 1/2</td>
+					<td>Units</td>
 				</tr>
 				<tr>
-					<td class="left"><img src="/images/mw_logo.png" /></td>
-					<td class="dots">Strong</td>
-					<td class="dots">Yes</td>
-					<td class="dots">Yes</td>
-					<td class="dots">Yes</td>
-					<td class="dots">Shortest</td>
-					<td class="dots">$</td>
+					<td class="left">Length</td>
+					<td>29"</td>
+					<td>32"</td>
+					<td>34"</td>
+					<td >36"</td>
+					<td>inches</td>
 				</tr>
 				<tr>
-					<td class="left">Moineau<br /> Type</td>
-					<td class="dots">Strong</td>
-					<td class="dots">No</td>
-					<td class="dots">No</td>
-					<td class="dots">No</td>
-					<td class="dots">Long</td>
-					<td class="dots">$$$</td>
+					<td class="left">Pressure Delta</td>
+					<td>1200-1500</td>
+					<td>1200-1800</td>
+					<td>1500-2000</td>
+					<td>1550-2100</td>
+					<td>psi</td>
 				</tr>
 				<tr>
-					<td class="left">Roller<br /> Vane Type</td>
-					<td>Poor</td>
+					<td class="left">RPM</td>
+					<td>250-400</td>
+					<td>250-400</td>
+					<td>250-350</td>
+					<td>250-350</td>
+					<td>rpm</td>
+				</tr>
+				<tr>
+					<td class="left">Flowrate</td>
+					<td>40-60</td>
+					<td>40-75</td>
+					<td>40-85</td>
+					<td>40-95</td>
+					<td>gpm</td>
+				</tr>
+				<tr>
+					<td class="left">Torque</td>
+					<td>122-167</td>
+					<td>255-395</td>
+					<td>475-664</td>
+					<td>810-975</td>
+					<td>ft * lbs</td>
+				</tr>
+				<tr>
+					<td class="left">Connection</td>
+					<td>1" AMMT</td>
+					<td>1-1/2" AMMT</td>
+					<td>2-3/8" PAC</td>
+					<td>3" PAC</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="left">Weight on Bit</td>
+					<td>8,250</td>
+					<td>9,625</td>
+					<td>19,250</td>
+					<td>27,750</td>
+					<td>lbs</td>
+				</tr>
+				<tr>
+					<td class="left">Weight</td>
+					<td>17.5</td>
+					<td>22</td>
+					<td>32</td>
+					<td>39</td>
+					<td>lbs</td>
+				</tr>
+				<tr>
+					<td class="left">Corrosive Resistant</td>
+					<td>Yes</td>
 					<td>Yes</td>
 					<td>Yes</td>
 					<td>Yes</td>
 					<td>Short</td>
-					<td>$$</td>
+				</tr>
+				<tr>
+					<td class="left">Temperature Rated</td>
+					<td>525</td>
+					<td>525</td>
+					<td>525</td>
+					<td>525</td>
+					<td>degrees F</td>
+				</tr>
+				<tr>
+					<td class="left">Operating Fluid</td>
+					<td>Liquid/Gas</td>
+					<td>Liquid/Gas</td>
+					<td>Liquid/Gas</td>
+					<td>Liquid/Gas</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="left">Bit Size</td>
+					<td>1-7/8 to 2-3/4</td>
+					<td>2-3/16 to 3-1/4</td>
+					<td>3-1/4 to 4</td>
+					<td>4-1/8 to 5-1/2</td>
+					<td>inches</td>
 				</tr>
 			</table>
-		</div>
+			</div>
+			</div>
 	</div>
 </div>
