--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -319,6 +319,17 @@ ul.accordian li .extra img
 
 /* Specs */
 
+img.spec
+{
+  float:left;
+  margin-right: 15px;
+}
+
+.top
+{
+  margin-left:150px;
+}
+
 a.spec_button
 {
   background:url("/images/spec_button.png");
@@ -333,11 +344,67 @@ a.spec_button
   text-decoration:none;
 }
 
-table
+a.tab
 {
-  color:#000;
-  width:100%;
+  background:url('/images/tab.jpg');
+  width:158px;
+  color:#959595;
+  font-size:24px;
+  text-decoration:none;
+  font-weight:bold;
+  height:28px;
+  padding:2px 0;
   text-align:center;
+  display:inline-block;
+}
+
+a.tab.active
+{
+  background:url('/images/tab_active.jpg');
+}
+
+.bottom_specs
+{
+  padding:20px 0;
+  background:url('/images/spec_bottom.jpg') no-repeat center top;
+}
+
+.bottom_specs .info
+{
+  margin:0 20px 0 0;
+  width:200px;
+  text-align:right;
+  float:left;
+}
+
+.bottom_specs table
+{
+  font-family:Arial;
+  font-size:13px;
+  font-weight:bold;
+  color:#000;
+  width:650px;
+  text-align:center;
+}
+
+.general_tab
+{
+  margin-left:220px;
+}
+
+.individual_tab
+{
+  display:none;
+}
+
+.big
+{
+  font-size:15px;
+}
+
+.bottom_specs tr td
+{
+  border-bottom:1px #000 dotted;
 }
 
 tr.solid td
